--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Quiz</string>
+    <string name="question_text">Текст вопроса</string>
+    <string name="true_button">Правда</string>
+    <string name="false_button">Ложь</string>
+    <string name="action_settings">Настройки</string>
+    <string name="correct_toast">Верно</string>
+    <string name="incorrect_toast">Не верно</string>
+    <string name="next_question_button">Дальше</string>
+    <string name="prev_question_button">Назад</string>
+    <string name="question_oceans">Тихий океан больше Атлантического океана.</string>
+    <string name="question_mideast">Суэцкий канал соединят Красное море и Индийский океан.</string>
+    <string name="question_africa">Исток реки Нил находится в Египте.</string>
+    <string name="question_americas">Амазонка самая длинная река Америки.</string>
+    <string name="question_asia">Озеро Байкал самое старое и глубокое озеро в мире с чистой водой.</string>
 </resources>
